--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Entity": "Server=localhost;Database=API;ConnectRetryCount=0;User Id=sa;Password=Huynhbao2606;Trusted_Connection=True;TrustServerCertificate=True"
-  }
+  },
+  "ApiUrl" :  "https://localhost:5001/"
 }
